# ArchLinuxConfigs

./: .bashrc  .gitignore  .obsidian.vimrc  .vimrc  .zshrc  README.md  image_to_ascii_color.py  starship.toml  sync.sh  vivaldi-bookmarks
.obsidian/: app.json  appearance.json  community-plugins.json  hotkeys.json  workspace.json
.obsidian.backup/: app.json  appearance.json  community-plugins.json  graph.json  hotkeys.json  workspace.json
.obsidian.backup/plugins.backup/fuzzy-chinese-pinyin/: data.json
.obsidian.backup/plugins.backup/notedraw/: main.js  main.js.bak
.obsidian.backup/plugins.backup/obsidian-excalidraw-plugin/: data.json
.obsidian.backup/snippets/: force-left-align.css
dvorak-practice/: CMakeLists.txt  analyze_ngrams.py  build_freq_tiers.py  build_tiered_wordlists.py  build_tiered_wordlists_v2.py  check_widths.py  download_wordlists.py  find_acc.py  find_acc2.py  generate_wordlists.py
dvorak-practice/src/: config.cpp  config.h  history.cpp  history.h  keyboard.cpp  keyboard.h  main.cpp  practice.cpp  practice.h  statistics.cpp  statistics.h  ui_menu.cpp  ui_menu.h  ui_practice.cpp  ui_practice.h  ui_stats.cpp  ui_stats.h  wordlist.cpp  wordlist.h
fastfetch/: ascii.txt  config.jsonc  fastfetch  头像1_color_ascii.txt
kitty/: colors.conf  current-theme.conf  dark-theme.auto.conf  kitty.conf  kitty.conf.bak
kitty/themes/: magtugen.conf
niri/: animation.kdl  binds.kdl  colors.kdl  config.kdl  output.kdl  rule.kdl
niri/scripts/: swayidle.sh
nvim/: init.lua  nvim
nvim-test/: init.lua  nvim-pack-lock.json
nvim-test/lua/config/: autocmds.lua  (+2 more)
(+90 files in other folders)
